vueのホットデプロイをしたい・破

--- a/webapp/nginx/conf.d/default.conf
+++ b/webapp/nginx/conf.d/default.conf
@@ -9,7 +9,7 @@ server {
   proxy_send_timeout    600;
 
   location / {
-    root   /opt/isucon/public;
+    root   http://localhost:8081;
     index  index.html index.htm;
     try_files $uri /index.html;
   }
