--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -18,9 +18,10 @@ services:
     image: vue-dev:latest
     volumes:
       - ./fontend:/opt/isucon/public
-    ports: 8081:8081
+    ports: 
+      - "8081:8081"
 
-    mysql:
+  mysql:
     image: mysql:8
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     environment:
