--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -14,13 +14,6 @@ services:
       - "webapp"
       - "payment"
 
-  vue-dev:
-    image: vue-dev:latest
-    volumes:
-      - ./fontend:/opt/isucon/public
-    ports: 
-      - "8081:8081"
-
   mysql:
     image: mysql:8
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
@@ -64,6 +57,19 @@ services:
        - 8082:80
     volumes:
        - /sessions
+
+  webapp:
+    build: ./go
+    volumes:
+      - ./go:/go/src/webapp
+    env_file:
+      - ".env"
+    environment:
+      - "PAYMENT_API"
+    links:
+      - payment
+    ports:
+      - "127.0.0.1:8000:8000"
 
 volumes:
   mysql:
